# voidsend

./: .gitignore  .trace_snapshot_20260428_134715.txt  Cargo.toml  README.md  \( {file}.bak. \)(date +%Y%m%d_%H%M%S)  client-requirements-scope.txt  dev.sh  dev.sh.bak  dev_helper.sh  dev_trace.py  llm-chat-history.txt  main.py  main.py.bak  requirements.txt  requirements.txt.bak  voidsend_dev.sh  voidsend_env.sh
config/: profiles.py  settings.py.bak
core/: content_generator.py  content_generator.py.bak  csv_reader.py  job_manager.py  job_manager.py.bak  mailer.py  notifier.py  raffle.py  template.py
logs/: reporter.py
raffle_server/: github_pages.py  server.py  tunnel.py  verify.html.bak
src/: main.rs
src/config/: mod.rs  profiles.rs
templates/: requirements-dev.txt
templates/layouts/: plaintext.txt
ui/: app.py  app.py.bak  file_browser.py  file_browser.py.bak  history_screen.py  input_dialog.py.bak  new_job_screen.py  new_job_screen.py.bak  notifications_screen.py  raffle_screen.py  raffle_screen.py.bak  setup_screen.py  setup_screen.py.bak  subscriber_manager.py  subscriber_manager.py.bak  track_raffle_screen.py
