[package]
name = "voidsend"
version = "0.1.0"
edition = "2021"
authors = ["rarebyteforge"]
description = "Offline-first bulk SMTP mass mailer for Termux. Hacker-friendly TUI + headless CLI."
repository = "https://github.com/rarebyteforge/voidsend"
license = "MIT OR Apache-2.0"
keywords = ["termux", "smtp", "mass-mailer", "ratatui", "offline"]

[dependencies]
lettre = { version = "0.11", 
           default-features = false, 
           features = [
               "builder", 
               "smtp-transport", 
               "tokio1", 
               "rustls-tls", 
               "tokio1-rustls-tls"   # This is the missing glue feature
           ] 
}
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
csv = "1.3"
handlebars = "6.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "6.0"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false
